# flaggy

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/: v00001_user.sql
src/: main.rs
src/application/: mod.rs
src/application/feature/: create_feature.rs  mod.rs
src/application/user/: create_user.rs  login_user.rs
src/domain/: mod.rs  password.rs  token.rs  user.rs  user_repository.rs
src/infrastructure/: mod.rs
src/infrastructure/endpoints/health/: health_check.rs
src/infrastructure/repository/: mod.rs  user_credential_entity.rs  user_entity.rs  user_repository.rs  user_role.rs
src/infrastructure/server/: server.rs
src/infrastructure/server/handler/: mod.rs
src/infrastructure/server/handler/feature/: mod.rs  post_feature.rs
src/infrastructure/server/handler/health/: health_check.rs
src/infrastructure/server/handler/user/: mod.rs  post_login.rs  post_user.rs
src/infrastructure/server/middleware/: logger.rs  mod.rs  security.rs
