[package]
name = "flaggy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
futures-util = "0.3.30"
actix-service = "2.0.2"
serde = { version = "1.0.202", features = ["derive"] }
chrono = "0.4.38"
uuid = { version = "1.8.0", features = ["v4"] }
bcrypt = "0.15.1"
rand = "0.8.5"
diesel = { version = "2.1.6", features = ["mysql", "r2d2", "chrono"] }
r2d2 = "0.8.10"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
